# OSDev-LLVM-CLion

./: CMakeLists.txt  README.md  generate-iso.sh  qemu-bin.sh  qemu-iso.sh  toolchain.cmake
src/kernel/arch/x86/: boot.s  linker.ld
